--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GDPR</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./index.js" defer></script>
     <link rel="stylesheet" href="./index.css">
@@ -18,23 +18,11 @@
             <button id="continue" >hahahah</button>
         </div> -->
         <div class="anim" id="anim">
-            <h2 style="text-align: center;">Vinner:</h2>
+            <h2 style="text-align: center;">Poeng:</h2>
             <h3 style="text-align: center;" id="vinner"></h3>
             <button id="restart" onclick="restart()">Restart</button>
         </div>
 
-
-        <div class="containerLine">
-            <div id="AP" style="width: 20px;"class="Line"><p class="line-text">AP</p></div>
-            <div id="Høyre" style="width: 20px;"class="Line"><p class="line-text">Høyre</p></div>
-            <div id="SP" style="width: 20px;"class="Line"><p class="line-text">SP</p></div>
-            <div id="FrP" style="width: 20px;"class="Line"><p class="line-text">FrP</p></div>
-            <div id="SV" style="width: 20px;"class="Line"><p class="line-text">SV</p></div>
-            <div id="Rødt" style="width: 20px;"class="Line"><p class="line-text">Rødt</p></div>
-            <div id="Venstre" style="width: 20px;"class="Line"><p class="line-text">Venstre</p></div>
-            <div id="MdG" style="width: 20px;"class="Line"><p class="line-text">MdG</p></div>
-            <div id="Krf" style="width: 20px;"class="Line"><p class="line-text">Krf</p></div>
-        </div>
 
 
     <div class="alleSprøsmål" id="alleSpørsmål">
