--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-        <h1 id="valgomat_prompt_text">Parti Valgomat</h1>
+        <h1 id="valgomat_prompt_text">GDPR Undersøkelse</h1>
 
         <!-- <div id="chart" class="chart">
             <canvas id="myChart"></canvas>
